# bc_exploration

./: .gitignore  .travis.yml  CMakeLists.txt  Pipfile  README.md  pylint_rc  pytest.ini  setup.py  test_pylint
agents/: frontier_agent.py  test_frontier_agent.py
algorithms/: frontier_based_exploration.py  test_frontier_based_exploration.py
bc_exploration/: build.sh  test_pybind.py
bc_exploration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bc_exploration/agents/: frontier_agent.py
bc_exploration/cpp/: CMakeLists.txt  test_bindings.py
bc_exploration/cpp/inc/: safe_array.h
bc_exploration/cpp/inc/exploration/: astar.h  collision.h  util.h
bc_exploration/envs/: grid_world.py
bc_exploration/footprints/: collision_cpp.py  footprints.py  test_footprints.py
bc_exploration/mapping/: costmap.py
bc_exploration/planners/: astar_cpp.py  test_astar_cpp.py
bc_exploration/utilities/: paths.py
benchmarks/: benchmarks.py
cpp/: CMakeLists.txt
cpp/src/exploration/: astar.cpp
envs/: grid_world.py  map_maker.py  test_grid_world.py
footprints/: collision_cpp.py  footprint_points.py  footprints.py  test_footprints.py
mapping/: costmap.py  log_odds_mapper.py  test_costmap.py  test_log_odds_mapper.py
misc/: check_line_count.sh  generate_readme.sh  readme.md  test_pycodestyle.sh
planners/: astar_cpp.py  test_astar_cpp.py
scripts/: build_exploration.sh  test_pylint  use_repo
sensors/: sensors.py  test_sensor_util.py
utilities/: map_transformations.py  paths.py  test_util.py  util.py  visualization.py
(+4 files in other folders)
